# rusty-boards

./: .gitignore  .gitlint  AGENTS.md  CLAUDE.md  README.md  flake.nix  jlcpcb.kibot.yaml
.claude/: settings.json
.claude/rules/: firmware.md  git.md  rust-dev.md  rust.md
.claude/skills/branch-cleanup/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/fix-review/: SKILL.md
.claude/skills/flash/: SKILL.md
.claude/skills/review-branch/: SKILL.md
.github/workflows/: dummy-button-jlcpcb.yaml  rust-check.yaml  voltage-meter-jlcpcb.yaml
.gitlint-rules/: body_rules.py
boards/dummy-button/: AGENTS.md  flake.nix
boards/dummy-button/firmware/: Cargo.toml
boards/dummy-button/firmware/.cargo/: config.toml
boards/dummy-button/firmware/src/: main.rs
boards/dummy-button/pcb/: dummy-button.kicad_pcb  sym-lib-table  untitled.kicad_sch  usb_and_power.kicad_sch
boards/temp-sensor/: AGENTS.md  flake.nix
boards/temp-sensor/firmware/: rust-toolchain.toml
boards/temp-sensor/firmware/.cargo/: config.toml
boards/temp-sensor/firmware/src/: ds18b20.rs  onewire.rs
boards/temp-sensor/pcb/: sym-lib-table  temp-sensor.kicad_pcb  temp-sensor.kicad_pro  temp-sensor.kicad_sch
boards/voltage-meter/: AGENTS.md  flake.nix
boards/voltage-meter/firmware/: Cargo.toml
boards/voltage-meter/firmware/.cargo/: config.toml
boards/voltage-meter/pcb/: fp-lib-table  voltage-meter.kicad_pcb  voltage-meter.kicad_sch
components/: TP5400.kicad_sym  esp32c3-mini.kicad_sym
components/esp32c3-mini.pretty/: esp32c3-mini.kicad_mod
components/rusty-boards.pretty/: C-0603-HandSolder.kicad_mod  R-0603-HandSolder.kicad_mod
dummy-button/: dummy-button.kicad_pcb  dummy-button.kicad_pro  dummy-button.kicad_sch  peripherals.kicad_sch
dummy-button/firmware/: Cargo.toml  README.md  export-esp.nu
lib/kicad/PEC11R-4215F-S0024/: XDCR_PEC11R-4215F-S0024.kicad_mod
lib/kicad/rusty-boards.pretty/: SOT-23.kicad_mod
sensor-server/: CLAUDE.md  Cargo.toml
sensor-server/src/: discovery.rs  http.rs  main.rs  serial.rs  store.rs
temp-sensor/: CLAUDE.md
temp-sensor/firmware/: Cargo.toml  build.rs  flake.nix
temp-sensor/firmware/.cargo/: config.toml
temp-sensor/firmware/src/: config.rs  ds18b20.rs  main.rs  metrics.rs  onewire.rs
tools/miner-scraper/: Cargo.toml  README.md  config.toml  flake.nix  miner-scraper.service
tools/miner-scraper/assets/: dashboard.json
tools/miner-scraper/dumps/: API-REFERENCE.md  braiins-cgminer-devdetails-s21plus.json  braiins-cgminer-devs-s21plus.json  braiins-cgminer-fans-s21plus.json  braiins-cgminer-pools-s21plus.json  braiins-cgminer-stats-s21plus.json  braiins-cgminer-summary-s21plus.json  braiins-cgminer-tempctrl-s21plus.json  braiins-cgminer-temps-s21plus.json  braiins-cgminer-tunerstatus-s21plus.json  braiins-cgminer-version-s21plus.json  braiins-graphql-bos-info-s21plus.json  braiins-graphql-bosminer-config-s21plus.json  braiins-graphql-bosminer-info-s21plus.json  braiins-graphql-bosminer-pools-s21plus.json  braiins-graphql-schema-s21plus.json  luxos-cgminer-atm-s21pro.json  luxos-cgminer-coin-s21pro.json  luxos-cgminer-config-s21pro.json  luxos-cgminer-devdetails-s21pro.json  luxos-cgminer-devs-s21pro.json  luxos-cgminer-events-s21pro.json  luxos-cgminer-fans-s21pro.json  luxos-cgminer-frequencyget0-s21pro.json  luxos-cgminer-frequencyget1-s21pro.json  luxos-cgminer-frequencyget2-s21pro.json  luxos-cgminer-hashboardopts-s21pro.json  luxos-cgminer-healthctrl-s21pro.json  luxos-cgminer-limits-s21pro.json  luxos-cgminer-poolopts-s21pro.json  luxos-cgminer-pools-s21pro.json  luxos-cgminer-power-s21pro.json  luxos-cgminer-profiles-s21pro.json  luxos-cgminer-stats-s21pro.json  luxos-cgminer-summary-s21pro.json  luxos-cgminer-temps-s21pro.json  luxos-cgminer-tunerstatus-s21pro.json  luxos-cgminer-version-s21pro.json  luxos-cgminer-voltageget0-s21pro.json  luxos-cgminer-voltageget1-s21pro.json  (+38 more)
tools/miner-scraper/src/: cgminer.rs  config.rs  endpoint.rs  http.rs  main.rs  metrics.rs  parser.rs  scrape.rs  scraper.rs  store.rs
tools/miner-scraper/src/tests/: cgminer.rs  config.rs  endpoint.rs  metrics.rs  parser.rs  store.rs
tools/sensor-server/: AGENTS.md  CLAUDE.md  README.md  flake.nix  sensor-server.service
tools/sensor-server/.cargo/: config.toml
voltage-meter/: fp-lib-table  sym-lib-table  voltage-meter.kicad_pcb  voltage-meter.kicad_pro  voltage-meter.kicad_sch
voltage-meter/firmware/: CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
voltage-meter/firmware/.helix/: languages.toml
voltage-meter/firmware/examples/: adc_reader.rs  animation.rs  lm75_reader.rs  metrics_exporter.rs  watchdog.rs
voltage-meter/firmware/src/: adc.rs  config.rs  display.rs  kalman.rs  lib.rs  lm75.rs  main.rs  metrics.rs
(+5 files in other folders)
