[package]
edition = "2021"
name    = "sensor-server"
version = "0.1.0"

[dependencies]
anyhow     = "1"
axum       = "0.8"
clap       = { version = "4", features = ["derive"] }
env_logger = "0.11"
futures-core = "0.3"
inotify    = { version = "0.11", default-features = false, features = ["stream"] }
log        = "0.4"
serialport = "4"
tokio      = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-util = "0.7"
