[package]
edition = "2021"
name    = "temp-sensor"
version = "0.1.0"

[dependencies]
defmt                  = "1.0"
embassy-executor       = { version = "0.9.1", features = ["defmt"] }
embassy-futures        = "0.1"
embassy-sync           = "0.7"
embassy-time           = { version = "0.5.0", features = ["generic-queue-8"] }
esp-backtrace          = { version = "0.18.1", features = ["defmt", "esp32c3", "panic-handler"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }
esp-hal                = { version = "1.0.0", features = ["defmt", "esp32c3", "unstable"] }
defmt-rtt              = "1.1.0"
esp-println            = { version = "0.16.1", features = ["esp32c3"] }
esp-rtos               = { version = "0.2.0", features = ["embassy", "esp32c3"] }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug         = 2
incremental   = false
lto           = 'fat'
opt-level     = 's'
