[package]
edition = "2021"
name    = "voltage-meter"
version = "0.1.0"

[[bin]]
name = "voltage-meter"
path = "./src/main.rs"

[lib]
name = "voltage_meter"
path = "./src/lib.rs"

[dependencies]
critical-section = "1.2.0"
defmt = "0.3.10"
embassy-executor = { version = "0.7.0", features = [
  "defmt",
  "task-arena-size-20480",
] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embassy-sync = "0.6.0"
esp-backtrace = { version = "0.15.1", features = [
  "defmt",
  "esp32c3",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "1.0.0-beta.0", features = [
  "defmt",
  "esp32c3",
  "unstable",
] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32c3"] }
esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32c3"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
embedded-hal = { version="1.0.0", features=["defmt-03"] }
embedded-hal-bus = "0.2.0"
mipidsi = "0.9.0"
embedded-graphics = "0.8.1"
profont = "0.7.0"
format_no_std = "1.2.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
