[package]
edition = "2021"
name    = "dummy-button-firmware"
version = "0.1.0"

[dependencies]
defmt                  = "1.0"
defmt-rtt              = "1.1.0"
embassy-executor       = { version = "0.9.1", features = ["defmt"] }
embassy-time           = { version = "0.5.0", features = ["generic-queue-8"] }
esp-backtrace          = { version = "0.18.1", features = ["defmt", "esp32s3", "panic-handler"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
esp-hal                = { version = "1.0.0", features = ["defmt", "esp32s3", "unstable"] }
esp-rtos               = { version = "0.2.0", features = ["embassy", "esp32s3"] }

[lints.clippy]
unwrap_used = "deny"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
